--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 </head>
 <body>
     <h1>Hola desde html</h1>
+    <p>Lorem ipsum dolor sit amet, 
+        consectetur bla bla bla Estoy dolido por la ceguera de 
+        esta mujer.</p>
 </body>
 </html>
